[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UnitCard.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UnitCardView.tscn" type="PackedScene" id=3]

[node name="UnitCard" type="Button"]
margin_right = 77.0
margin_bottom = 107.0
rect_min_size = Vector2( 79, 109 )
shortcut_in_tooltip = false
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
is_selectable = false

[node name="Border" type="ColorRect" parent="."]
margin_right = 79.0
margin_bottom = 109.0
mouse_filter = 2
color = Color( 0.75, 0.75, 0.75, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitCardView" parent="." instance=ExtResource( 3 )]
margin_left = 2.0
margin_top = 2.0
margin_right = 81.0
margin_bottom = 111.0
rect_min_size = Vector2( 79, 109 )
rect_scale = Vector2( 0.333, 0.333 )
mouse_filter = 2
[connection signal="mouse_entered" from="." to="." method="_on_UnitCard_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_UnitCard_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_UnitCard_pressed"]
